docs/0.20.1/_sources/api/gammapy.modeling.models.PowerLawSpectralModel.rst.txt
PowerLawSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: PowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PowerLawSpectralModel.amplitude
      ~PowerLawSpectralModel.covariance
      ~PowerLawSpectralModel.default_parameters
      ~PowerLawSpectralModel.frozen
      ~PowerLawSpectralModel.index
      ~PowerLawSpectralModel.is_norm_spectral_model
      ~PowerLawSpectralModel.parameters
      ~PowerLawSpectralModel.pivot_energy
      ~PowerLawSpectralModel.reference
      ~PowerLawSpectralModel.tag
      ~PowerLawSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~PowerLawSpectralModel.__call__
      ~PowerLawSpectralModel.copy
      ~PowerLawSpectralModel.energy_flux
      ~PowerLawSpectralModel.energy_flux_error
      ~PowerLawSpectralModel.evaluate
      ~PowerLawSpectralModel.evaluate_energy_flux
      ~PowerLawSpectralModel.evaluate_error
      ~PowerLawSpectralModel.evaluate_integral
      ~PowerLawSpectralModel.freeze
      ~PowerLawSpectralModel.from_dict
      ~PowerLawSpectralModel.from_parameters
      ~PowerLawSpectralModel.integral
      ~PowerLawSpectralModel.integral_error
      ~PowerLawSpectralModel.inverse
      ~PowerLawSpectralModel.inverse_all
      ~PowerLawSpectralModel.plot
      ~PowerLawSpectralModel.plot_error
      ~PowerLawSpectralModel.reassign
      ~PowerLawSpectralModel.reference_fluxes
      ~PowerLawSpectralModel.spectral_index
      ~PowerLawSpectralModel.to_dict
      ~PowerLawSpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: index
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: pivot_energy
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_energy_flux
   .. automethod:: evaluate_error
   .. automethod:: evaluate_integral
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: unfreeze
